# django_json_model_field

./: PKG-INFO  pyproject.toml  setup.py
django_json_model_field/: util.py
django_json_model_field/db/models/: __init__.py  base_json_model_field.py  conditional_json_model_attribute.py  conditional_json_model_field.py  json_model.py  json_model_field.py  json_model_options.py
django_json_model_field/forms/: __init__.py  nested_form_field.py  nested_model_form_field.py  widgets.py
django_json_model_field/templates/django_json_model_field/forms/widgets/: nested_form_input.html
