[project]
name = "django_json_model"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django_json_model_field"
version = "0.0.1-pre.8"
description = "Use a model class to provide a strict data structure for JSON fields"
authors = ["Daniel Schaffer <dschaffer@instawork.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
Django = ">=2.2,<3.3"

[tool.poetry.dev-dependencies]
black = "~=22.1.0"
django-mysql = ">=3.3.0,<4.6.0"
expects = "~=0.9.0"
isort = ">=5.5.1,<5.6"
mypy = ">=0.931"
mysqlclient = ">=2.0.3, <3.0.0"
pytest = "^7.0.1"

[tool.mypy]
ignore_missing_imports = true
exclude = "venv|migrations|^scripts"
